Enable preview for java